tababr slider && step action z-index issue fix && padding on goals

--- a/webapp/src/components/goals/styles/goal-step-action.scss
+++ b/webapp/src/components/goals/styles/goal-step-action.scss
@@ -9,6 +9,7 @@
   position: fixed;
   left: 0; bottom: 0;
   border-top: 1px solid $deepBlue-10;
+  z-index: 9;
 
   &__header {
     @include size(100%, 72px);
