--- a/webapp/src/components/goals/styles/goals.scss
+++ b/webapp/src/components/goals/styles/goals.scss
@@ -6,6 +6,7 @@
 
   @include size(100%);
   padding-left: 30px;
+  padding-bottom: 162px;
   overflow-y: auto;
 
   &__tags {
